tests/NormalTests/paczka2/big_fuzzy/18405478.err
Error in line 10: NDlLky A762 44,7
Error in line 21: XDkwKEq9a A818 37,5
Error in line 29: cEWbvZDpzdx A720 97,98
Error in line 35: NDlLky A818 98,5
Error in line 40: XDkwKEq9a A818 93,5
Error in line 50: XDkwKEq9a A762 78,5
Error in line 54: 11z6Snoq A511 59,6
Error in line 53: cEWbvZDpzdx A511 38,6
Error in line 62: cEWbvZDpzdx A818 84,8
Error in line 63: cEWbvZDpzdx A720 94,8
Error in line 59: NDlLky A762 46,5
Error in line 72: 11z6Snoq A762 14,2
Error in line 75: dqHN A818 76,3
Error in line 77: dqHN A720 28,3
Error in line 84: 11z6Snoq A818 92,0
Error in line 85: 11z6Snoq A762 58,2
Error in line 98: NDlLky A7}2 -},8
Error in line 74: A511 A762 138,4
Error in line 104: nyG A720 25,2
Error in line 131: NDlLky A762 89,4
Error in line 132: NDlLky A511 23,7
Error in line 133: XDkwKEq9a A762 27,3
Error in line 137: XDkwKEq9a A511 58,4
Error in line 148: NDlLky A762 47,8
Error in line 149: XDkwKEq9a A762 52,8
Error in line 169: 11z6Snoq A818 $48,3
Error in line 162: XDkwKEq9a A720 28,0
Error in line 170: XDkwKEq9a A511 6,4
Error in line 124: nyG A511 135,1
Error in line 177: cEWbvZDpzdx A818 -4,7
Error in line 174: nyG A720 0,1
Error in line 179: nG A818 173,8
Error in line 176: cEWbvZDpzdx A818 82,5
Error in line 180: 11z6Snoq A720 7,8
Error in line 186: 11z6Snoq A762 84,5
Error in line 195: NDlLky A511 93,5
Error in line 178: nyG A818 47,1
Error in line 204: cEWbvZDpzdx A762 37,6
Error in line 172: dqHN A511 10,9
Error in line 216: NDlLky A762 36,22
Error in line 211: dqHN A762 36,1
Error in line 210: cEWbvZDpzdx A720 46,0
Error in line 237: nyG A720 16,04
Error in line 242: dqHN A511 154,9
Error in line 249: A511 A818 80,50
